Fixed misaligned top with bottom parts

--- a/TinyStyles.css
+++ b/TinyStyles.css
@@ -63,26 +63,18 @@ body {
 @media screen and (min-width: 1130px) {
   .Title {
     position: absolute;
-    margin: 2% 8%;
+    top: 1.5em;
+    right: 55%;
   }
   .Title h1 {
-    padding: 2em 1.7em;
+    padding: 2.1em 1.7em;
   }
   #NewTaskField {
     position: static;
   }
   .Buttons {
-    width: 30vw;
     position: relative;
-    left: 12em;
-  }
-  .TaskSet {
-    background: url(salmy/salmy-lowleft.png) 50%/90px no-repeat;
-    background-color: rgb(255,250,250,0.8);
-  }
-  .TaskReset {
-    background: url(salmy/salmy-upright.png) 30%/70px no-repeat ;
-    background-color: rgb(255,250,250,0.8);
+    left: 210px;
   }
 }
 
@@ -140,8 +132,9 @@ body {
   text-align: center;
 }
 .ToggleActiveState input {
-  width: 80px;
-  height: 40px;
+  width: 6em;
+  height: 3em;
+  margin-bottom: 1em;
   border-radius: 20px;
   background-color: rgb(255,160,110,0.7);
   box-sizing: inherit;
